--- a/web-os-launch/build.gradle
+++ b/web-os-launch/build.gradle
@@ -13,7 +13,7 @@ dependencies {
     // https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-server
 //    implementation 'org.eclipse.jetty:jetty-webapp:9.4.49.v20220914'
     implementation  "javax.servlet:javax.servlet-api:4.0.1"
-
+    implementation project(":web-os-api")
 
 //    testImplementation platform('org.junit:junit-bom:5.9.1')
 //    testImplementation 'org.junit.jupiter:junit-jupiter'
