--- a/web-os-simple-web/build.gradle
+++ b/web-os-simple-web/build.gradle
@@ -12,6 +12,9 @@ repositories {
 dependencies {
     implementation  "javax.servlet:javax.servlet-api:4.0.1"
     implementation  'com.fasterxml.jackson.core:jackson-databind:2.12.5'
+    implementation 'ch.qos.logback:logback-classic:1.2.3'
+    compileOnly 'org.projectlombok:lombok:1.18.8'
+    annotationProcessor 'org.projectlombok:lombok:1.18.8'
 //    testImplementation platform('org.junit:junit-bom:5.9.1')
 //    testImplementation 'org.junit.jupiter:junit-jupiter'
 }
