--- a/web-os-core/build.gradle
+++ b/web-os-core/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation project(":web-os-api")
     implementation 'org.eclipse.jetty:jetty-webapp:9.4.49.v20220914'
     implementation 'ch.qos.logback:logback-classic:1.2.3'
+    implementation 'cn.hutool:hutool-core:5.8.26'
 
     implementation 'com.h2database:h2:2.1.210'
 
