--- a/web-os-core/src/main/resources/application.properties
+++ b/web-os-core/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # 应用服务 WEB 访问端口
 server.port=8080
 
-web.os.db.url=jdbc:h2:file:./h2/h2.db
+web.os.db.url=jdbc:h2:file:./.web-os-data/db/h2.db
 web.os.db.username=sa
 web.os.db.password=sa
