--- a/web-os-core/build.gradle
+++ b/web-os-core/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '2.7.14'
+    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
 group = 'cn.donting.web.os'
@@ -12,17 +14,18 @@ repositories {
 
 dependencies {
     compileOnly project(":web-os-launch")
-    implementation project(":web-os-simple-web")
     implementation project(":web-os-api")
+    implementation ('org.springframework.boot:spring-boot-starter-web'){
+//        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
+    }
     implementation 'org.eclipse.jetty:jetty-webapp:9.4.49.v20220914'
-    implementation 'ch.qos.logback:logback-classic:1.2.3'
     implementation 'cn.hutool:hutool-core:5.8.26'
 
-    implementation 'com.h2database:h2:2.1.210'
 
     compileOnly 'org.projectlombok:lombok:1.18.8'
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
-//    implementation 'org.springframework.boot:spring-boot-starter-web'
+//    implementation project(":web-os-simple-web")
+//    implementation 'com.h2database:h2:2.1.210'
 //    implementation 'org.springframework.boot:spring-boot-starter-jetty'
 //    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
