--- a/web-os-core/build.gradle
+++ b/web-os-core/build.gradle
@@ -18,8 +18,11 @@ dependencies {
     implementation ('org.springframework.boot:spring-boot-starter-web'){
 //        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
     }
-    implementation 'org.eclipse.jetty:jetty-webapp:9.4.49.v20220914'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    implementation 'com.h2database:h2:2.1.214'
     implementation 'cn.hutool:hutool-core:5.8.26'
+    implementation 'org.eclipse.jetty:jetty-webapp:9.4.49.v20220914'
 
 
     compileOnly 'org.projectlombok:lombok:1.18.8'
