--- a/web-os-core/src/main/resources/application.properties
+++ b/web-os-core/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 # 应用服务 WEB 访问端口
 server.port=8080
-
+server.servlet.context-path=/app
 web.os.db.url=jdbc:h2:file:./.web-os-data/db/h2.db
-web.os.db.username=sa
-web.os.db.password=sa
+spring.datasource.url=jdbc:h2:file:./.web-os-data/db/h2.db;DATABASE_TO_UPPER=false;MODE=MYSQL;DB_CLOSE_ON_EXIT=FALSE;
+spring.datasource.password=sa
+spring.datasource.username=sa
+spring.h2.console.enabled=true
