--- a/web-os-core/build.gradle
+++ b/web-os-core/build.gradle
@@ -16,7 +16,7 @@ dependencies {
     compileOnly project(":web-os-launch")
     implementation project(":web-os-api")
     implementation ('org.springframework.boot:spring-boot-starter-web'){
-//        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
     }
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
