--- a/web-os-core/src/main/resources/application.properties
+++ b/web-os-core/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 # 应用服务 WEB 访问端口
 server.port=8080
 server.servlet.context-path=/app
-web.os.db.url=jdbc:h2:file:./.web-os-data/db/h2.db
-spring.datasource.url=jdbc:h2:file:./.web-os-data/db/h2.db;DATABASE_TO_UPPER=false;MODE=MYSQL;DB_CLOSE_ON_EXIT=FALSE;
+spring.datasource.url=jdbc:h2:file:./.web-os-data/db/h2.db;DATABASE_TO_UPPER=false;DB_CLOSE_ON_EXIT=FALSE;
 spring.datasource.password=sa
 spring.datasource.username=sa
-spring.h2.console.enabled=true
+spring.datasource.driver-class-name=org.h2.Driver
+
+#spring.jpa..hibernate.hbm2ddl.auto=update
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
