--- a/web-os-core/build.gradle
+++ b/web-os-core/build.gradle
@@ -19,7 +19,9 @@ dependencies {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
     }
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
+//    implementation 'org.xerial:sqlite-jdbc'
+//    implementation 'com.github.gwenn:sqlite-dialect:0.1.2'
+//    implementation 'org.hibernate.orm:hibernate-community-dialects'
     implementation 'com.h2database:h2:2.1.214'
     implementation 'cn.hutool:hutool-core:5.8.26'
     implementation 'org.eclipse.jetty:jetty-webapp:9.4.49.v20220914'
@@ -33,7 +35,7 @@ dependencies {
 //    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
-task 'classpath.dev'(dependsOn: ['build']){
+task 'classpath.dev'(dependsOn: ['classes']){
     doFirst {
         def classpath = sourceSets.main.runtimeClasspath
         def content = "cn.donting.web.os.core.WebOsCoreApplication\n"
