--- a/web-os-core/src/main/resources/application.properties
+++ b/web-os-core/src/main/resources/application.properties
@@ -1,14 +1,17 @@
 # 应用服务 WEB 访问端口
 server.port=8080
 server.servlet.context-path=/app
-spring.datasource.url=jdbc:h2:file:./.web-os-data/db/h2.db;DATABASE_TO_UPPER=false;DB_CLOSE_ON_EXIT=FALSE;
+#spring.datasource.url=jdbc:sqlite:./.web-os-data/db/db.db
+spring.datasource.url=jdbc:h2:file:./.web-os-data/db/h2.db;DATABASE_TO_UPPER=false;
 spring.datasource.password=sa
 spring.datasource.username=sa
 spring.datasource.driver-class-name=org.h2.Driver
+# JPA Properties
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# create 每次都重新创建表，update，表若存在则不重建
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 #spring.jpa..hibernate.hbm2ddl.auto=update
-
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.community.dialect.Sq
+#spring.jpa.hibernate.database-platform=org.hibernate.community.dialect.SQLiteDialect
