--- a/web-os-core/src/main/resources/application.properties
+++ b/web-os-core/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # 应用服务 WEB 访问端口
 server.port=8080
-server.servlet.context-path=/app
+server.servlet.context-path=/os
 #spring.datasource.url=jdbc:sqlite:./.web-os-data/db/db.db
 spring.datasource.url=jdbc:h2:file:./.web-os-data/db/h2.db;DATABASE_TO_UPPER=false;
 spring.datasource.password=sa
